# udemy-fastapi

./: .gitignore  README.md  pyproject.toml
backend/: main.py
backend/core/: config.py
