[tool.poetry]
name = "jobboard"
version = "0.1.0"
description = "A job board app using FastAPI."
authors = ["Bagus Rahman Aryabima <bagus.rahman.aryabima@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
